# hyprchoosy

./: .cloudflare-pages.md  .gitignore  CHANGELOG.md  Cargo.toml  DEBUG.md  README.md  build-debug.sh  build.sh  index.html  release-please-config.json  view-logs.sh  wrangler.toml
.github/workflows/: build-release.yml  ci.yml  release-please.yml
public/: index.html  site.webmanifest
scripts/: build-release.sh
src/: config.rs  launcher.rs  lib.rs  logger.rs  main.rs  matcher.rs
src/client_detection/: env_detector.rs  hyprland_detector.rs  mod.rs  process_tree_detector.rs
tests/: integration_tests.rs
