[package]
name = "hyprchoosy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Route links to different browsers by client and host for Hyprland"
repository = "https://github.com/filipechagas/hyprchoosy"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
url = "2.5"
sysinfo = "0.30"
anyhow = "1.0"
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
