[package]
name = "hyprchoosy"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Route links to different browsers by client and host for Hyprland"
repository = "https://github.com/filipechagas/hyprchoosy"
authors = ["Filipe Chagas"]
keywords = ["hyprland", "browser", "url", "launcher"]
categories = ["command-line-utilities"]
readme = "README.md"

[lib]
name = "hyprchoosy"
path = "src/lib.rs"

[[bin]]
name = "hyprchoosy"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
url = "2.5"
sysinfo = "0.30"
anyhow = "1.0"
libc = "0.2"
log = { version = "0.4", optional = true }
simplelog = { version = "0.12", optional = true }
serde_json = "1.0.145"

[features]
default = []
debug = ["log", "simplelog"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[package.metadata.deb]
maintainer = "Filipe Chagas"
section = "utils"
priority = "optional"
assets = [
    ["target/release/hyprchoosy", "usr/bin/", "755"],
]
